[project]
name = "comfyux"
description = "Better user experience plugin for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/googincheng/ComfyUX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "@googincheng"
DisplayName = "ComfyUX"
Icon = ""
