[project]
name = "comfyux"
description = "Better user experience plugin for ComfyUI."
version = "0.5.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/googincheng/ComfyUX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "@googincheng"
DisplayName = "ComfyUX"
Icon = ""
